# sdm_schemas

./: .gitignore  .yamllint.yaml  CNAME  CONTRIBUTING.md  COPYRIGHT  Makefile  README  README.md  SConstruct  _config.yml  defaultCatPolicy.paf  pyproject.toml  requirements.txt  yml
.github/: pull_request_template.md
.github/actions/setup/: action.yaml
.github/actions/setup-python/: action.yaml
.github/actions/setup-test-environment/: action.yaml
.github/workflows/: build.yaml  check_band_columns.yaml  compare.yaml  do_not_merge.yaml  docs.yaml  felislint.yaml  migrate.yaml  migrate_cdb.yaml  test_databases.yaml  test_mysql.yaml  test_postgresql.yaml  test_sqlite.yaml  validate.yaml  validate_extra_checks.yaml  validator.yaml  yamllint.yaml
bin.src/: EA_to_metadata_sql.py  addMySqlUser.py  cleanupExpiredRuns.py  destroyGlobal.py  dropDatabases.py  grantDCAccess.py  grantForUsers.py  measureTable.py  schema_to_metadata.py  setupGlobal.py
browser/: CHANGES.md  apdb.md  baseline.md  cdb_latiss.md  cdb_lsstcam.md  cdb_lsstcomcam.md  cdb_lsstcomcamsim.md  cdb_startrackerfast.md  cdb_startrackernarrow.md  cdb_startrackerwide.md  dp01.md  dp02.md  dp03.md  dp1.md  dp2.md  dp2_example.md  efd_latiss.md  efd_lsstcam.md  efd_lsstcomcam.md  hsc.md  imsim.md  index.md  ivoa_obscore.md  lsstcam.md  ppdb.md  yml
browser/_includes/: _footer.html  _header.html  _logo.html  _schema_list.html  _site_footer.html
browser/_layouts/: changes.html  schema.html  schema_index.html
browser/_sass/: style2.scss
browser/assets/css/: main.scss  style2.scss
datalink/: build  build_column_lists.py  build_datalink_metadata.py  columns-minimal.yaml  datalink-manifest.json  datalink.xml  dp01_object_cone_search.xml  dp01_position_cone_search.xml  dp01_truth_match_cone_search.xml  dp02_diaobject_to_diafs_timeseries.xml  dp02_diaobject_to_dias_timeseries.xml  dp02_object_to_fs_timeseries.xml  dp02_obscore_links.xml  dp03_10yr_mpc_lookup.xml  dp03_1yr_mpc_lookup.xml  dp1_diaobject_to_diafs_timeseries.xml  dp1_diaobject_to_dias_timeseries.xml  dp1_object_to_fs_timeseries.xml  dp2_diaobject_to_diafs_timeseries.xml  dp2_diaobject_to_dias_timeseries.xml  dp2_object_to_fs_timeseries.xml  hoverdrive.xml  obscore_links.xml  tap_schema_column_docs.xml  tap_schema_table_docs.xml
docs/: APDB.md  CDB.md  DRP.md  dp02_dc2.mmd
docs/changes/: DM-43722.cdb.md  DM-46240.misc.md  DM-46896.misc.md  DM-46989.misc.md  DM-47965.cdb.md  DM-48316.ap.md  DM-48316.sci.md  DM-48366.misc.md  DM-49074.sci.md  DM-49274.sci.md  DM-49710.sci.md  DM-49714.sci.md  DM-49727.sci.md  DM-49729.sci.md  DM-49876.sci.md  DM-49962.misc.md  DM-50252.sci.md  DM-50405.misc.md  DM-50521.misc.md  DM-50837.ap.md  DM-50914.misc.md  DM-50988.ap.md  DM-50988.sci.md  DM-51047.dr.md  DM-51051.cdb.md  DM-51064.dr.md  DM-51220.cdb.md  DM-51362.cdb.md  DM-51408.dr.md  DM-51410.dr.md  DM-51411.dr.md  DM-51414.dr.md  DM-51415.dr.md  DM-51416.dr.md  DM-51417.dr.md  DM-51439.cdb.md  DM-51449.dr.md  DM-51455.cdb.md  DM-51478.dr.md  DM-51506.dr.md  (+79 more)
examples/: sample.out  sample.sql  test.out  test.sql
policy/: defaultCatPolicy.paf  defaultProdCatPolicy.paf  defaultTestCatPolicy.paf
python/: generate-mock-ppdb-data.ipynb  schema.py
python/lsst/cat/: MySQLBase.py  SqlScript.py  __init__.py  administerRuns.py  dbSetup.py  policyReader.py
python/lsst/sdm/: __init__.py
python/lsst/sdm_schemas/: schemas
research/mysql/: README.txt  test001.py  test002.py  test003.py  test004.py
schemaBrowser/: README  constants.php  db.php  index.php  metadata.sql  metadata_DC3a.sql  metadata_DC3b.sql  sortable.js
schemaBrowser/includes/css/: lsst.css
scripts/: EA_to_metadata_sql.py  MySQLAdmin.py  addMySqlUser.py  administerRuns.py  cleanupExpiredRuns.py  create-databases.sh  dereference-yaml-for-browser.sh  generate-sql-files.sh  measureTable.py  mysqlBase.py  test-load-sql-mysql.sh  test-load-sql-postgres.sh  test-load-sql.sh  test-load-tap-mysql.sh  test-load-tap-postgres.sh
scripts/test/: create-databases.sh  generate-sql-files.sh  load-sql.sh  load-tap-schema.sh
sql/: README  SConscript  baselineSchema.sql  baselineSchema_sizing.ods  emptyTableCleanup4pt1_1.sql  lsstImSimSchema4mysql.sql  lsstPipelineSetup4mysql.sql  lsstSchema4mysql.sql  lsstSchema4mysqlDC3a.sql  lsstSchema4mysqlDC3b.sql  lsstSchema4mysqlPT1_1.sql  lsstSchema4mysqlPT1_2.sql  lsstSchema4mysqlS12_cfht.sql  lsstSchema4mysqlS12_lsstsim.sql.m4  lsstSchema4mysqlS12_sdss.sql.m4  lsstSchema4mysql_DC3a.sql  lsstSchema4mysql_sdss_pdac.sql  schema_mysql_S12_lsstSim.sql.m4  setup_DB_dataChallenge.sql  setup_DB_global.sql  setup_GlobalDB.sql  setup_perRunTables.sql  setup_perRunTablesS12_cfht.sql  setup_perRunTablesS12_lsstsim.sql  setup_perRunTablesS12_sdss.sql  setup_perRunTables_sdss.sql  setup_sdqa.sql  setup_storedFunctions.sql  test_init.sql
tap-schema/: Dockerfile  build  build-all  felis-validate  requirements.txt  set_schema_index  validator
tap-schema/sql/: 0000_tap_schema11.sql  0004_tap_schema.permissions.sql  1003_uws_tap_schema.sql
tests/: README  SConscript  cleanupExpiredRuns.paf  testAdministerRuns.py  testCleanupExpiredRuns.py  testDbSetup.py  testMySQLAdmin.py  testMySQLBase.py  testTimeFuncs.py  test_schema_resource.py  timeFuncs.py
ups/: cat.build  cat.cfg  cat.table  eupspkg.cfg.sh  sdm_schemas.cfg  sdm_schemas.table
yml/: README.md  apdb.yaml  baselineSchema.yaml  cdb_latiss.yaml  cdb_lsstcomcam.yaml  cdb_lsstcomcamsim.yaml  cdb_startrackernarrow.yaml  cdb_tma.yaml  dc2_dp01.yaml  desc_dc2_run12_v4.yaml  dp01_dc2.yaml  dp02.yaml  dp02_dc2.yaml  dp02_dc2_preops-863.yaml  dp02_obscore.yaml  dp02_patches.yaml  dp03.yaml  dp03_10yr.yaml  dp03_1yr.yaml  hsc.yaml  hsc_gen2.yaml  imsim.yaml  live_obscore.yaml  obsloctap.yaml  oga_live_obscore.yaml  post.sh  sdss_stripe82_01.yml  summit-latiss.yaml  summit.yaml  wise_00.yml  wise_01.yml
yml/archive/: dp01_dc2.yaml
yml/ivoa/: ObsCore-v1.1-descriptions.csv  ObsCore-v1.1-mandatory.csv  ObsCore-v1.1-optional.csv  README.md  make_obscore_nominal.py  obscore_nominal.yaml
(+50 files in other folders)
