[build-system]
requires = ["setuptools", "lsst-versions >= 1.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lsst-sdm-schemas"
description = "Science Data Model (SDM) Schemas for Rubin Observatory"
license = "GPL-3.0-or-later"
license-files = ["COPYRIGHT", "LICENSE"]
readme = "README.md"
authors = [
    {name="Rubin Observatory Data Management", email="dm-admin@lists.lsst.org"},
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy"
]
keywords = ["lsst"]
dependencies = [
    "lsst-felis",
]
requires-python = ">=3.11.0"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "lsst_versions.get_lsst_version" }

[project.urls]
Homepage = "https://sdm-schemas.lsst.io"
Source = "https://github.com/lsst/sdm_schemas"

[project.optional-dependencies]
test = [
    "pytest >= 3.2"
]

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
"lsst.sdm.schemas" = ["**/*.yaml"]

[tool.towncrier]
    package = "lsst.sdm.schemas"
    package_dir = "python"
    filename = "browser/CHANGES.md"
    directory = "docs/changes"
    title_format = "{version} ({project_date})"
    issue_format = "[{issue}](https://jira.lsstcorp.org/browse/{issue})"


    [[tool.towncrier.type]]
        directory = "dr"
        name = "Data Releases"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "sci"
        name = "Science Pipelines"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "ap"
        name = "Alert Production"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "cdb"
        name = "Consolidated Database"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "misc"
        name = "Miscellaneous"
        showcontent = true
